Добавил обработчик таблиц начал пдф

--- a/BarcodeLabelPrinringWebClient/src/app/file-upload/file-upload.component.html
+++ b/BarcodeLabelPrinringWebClient/src/app/file-upload/file-upload.component.html
@@ -1,8 +1,9 @@
 <form class="upload-file-form" [style.width.px]="width">
   <mat-form-field class="full-width">
     <mat-label>{{inputLabel}}</mat-label>
-    <input [disabled]="true" matInput>
+    <input [disabled]="true" matInput type="text" [(ngModel)]="path" name="path">
     <mat-hint align="start" class="mat-small">{{underInputText}} </mat-hint>
   </mat-form-field>
-  <button mat-raised-button color="accent" class="full-width">{{buttonText}}</button>
+  <input type="file" style="display: none" #fileInput [accept]="filter" (change)="onChangeFileInput($event, fileInput)" />
+  <button mat-raised-button color="accent" class="full-width" type="file" (click)="onClickFileInputButton()">{{buttonText}}</button>
 </form>
