--- a/BarcodeLabelPrinringWebClient/src/app/start/start.component.html
+++ b/BarcodeLabelPrinringWebClient/src/app/start/start.component.html
@@ -1,4 +1,4 @@
 <div class="center h v">
-    <app-file-upload inputLabel="csv файл для этикеток" underInputText="Скачать пример файла" width="600"
-        buttonText="Загрузить файл"></app-file-upload>
+    <app-file-upload route = "uploadTable" inputLabel="csv файл для этикеток" underInputText="Скачать пример файла" width="600"
+        buttonText="Загрузить файл" filter=".csv"></app-file-upload>
 </div>
