Remaded on new mvc project rendering pdf file and downloading IFIle for future saving to zip
Frontend
Created new function for uploading and downloading

--- a/BarcodeLabelPrinringWebClient/src/app/start/start.component.html
+++ b/BarcodeLabelPrinringWebClient/src/app/start/start.component.html
@@ -1,4 +1,4 @@
 <div class="center h v">
-    <app-file-upload route = "uploadTable" inputLabel="csv файл для этикеток" underInputText="Скачать пример файла" width="600"
-        buttonText="Загрузить файл" filter=".csv"></app-file-upload>
+    <app-file-upload route = "uploadtable" inputLabel="csv файл для этикеток" underInputText="Скачать пример файла" width="600"
+        buttonText="Загрузить файл" filter=".csv" fileName="invoice.pdf"></app-file-upload>
 </div>
