--- a/BarcodeLabelPrinringWebClient/src/app/file-upload/file-upload.component.html
+++ b/BarcodeLabelPrinringWebClient/src/app/file-upload/file-upload.component.html
@@ -4,6 +4,6 @@
     <input [disabled]="true" matInput type="text" [(ngModel)]="path" name="path">
     <mat-hint align="start" class="mat-small">{{underInputText}} </mat-hint>
   </mat-form-field>
-  <input type="file" style="display: none" #fileInput [accept]="filter" (change)="onChangeFileInput($event, fileInput)" />
+  <input type="file" style="display: none" #fileInput [accept]="filter" (input)="onChangeFileInput($event, fileInput)" />
   <button mat-raised-button color="accent" class="full-width" type="file" (click)="onClickFileInputButton()">{{buttonText}}</button>
 </form>
