--- a/BarcodeLabelPrinringWebClient/src/app/start/start.component.html
+++ b/BarcodeLabelPrinringWebClient/src/app/start/start.component.html
@@ -1,4 +1,5 @@
 <div class="center h v">
-    <app-file-upload route = "uploadtable" inputLabel="csv файл для этикеток" underInputText="Скачать пример файла" width="600"
-        buttonText="Загрузить файл" filter=".csv" fileName="invoice.pdf"></app-file-upload>
+    <app-file-upload route = "uploadtable" inputLabel="csv файл для этикеток" 
+    underInputText="Скачать пример файла" exampleFileName="Example.csv" exampleFileRoute="samplefile"
+    width="600" buttonText="Загрузить файл" filter=".csv" fileName="Archive.zip"></app-file-upload>
 </div>
