--- a/BarcodeLabelPrinringWebClient/src/app/settings/settings.component.html
+++ b/BarcodeLabelPrinringWebClient/src/app/settings/settings.component.html
@@ -4,8 +4,8 @@
     </a>
     <span>Настройки</span>
 </div>
-<form class="form">
-    <mat-form-field class="full-width" appearance="fill">
+<form class="form full-width full-height">
+    <mat-form-field  appearance="fill">
       <mat-label>Текст для накладной</mat-label>
       <textarea matInput placeholder="Текст"></textarea>
     </mat-form-field>
