--- a/BarcodeLabelPrinringWebClient/src/styles.scss
+++ b/BarcodeLabelPrinringWebClient/src/styles.scss
@@ -18,6 +18,9 @@ body {
 .full-width {
   width: 100%;
 }
+.full-height {
+  height: 100%;
+}
 
 .spacer {
   flex: 1 1 auto;
@@ -25,15 +28,10 @@ body {
 
 .wrapper {
   display: flex;
+  height: 88%;
   flex-direction: column;
+  justify-content: center;
 }
-
-app-footer {
-  position: fixed;
-  bottom: 0px;
-  width: 100%;
-}
-
 a {
   color: unset;
   font-weight: bold;
