fixed debug routing fixed style fixed nds fixed arcicle position

--- a/BarcodeLabelPrinringWebClient/src/app/final/final.component.html
+++ b/BarcodeLabelPrinringWebClient/src/app/final/final.component.html
@@ -1,1 +1,6 @@
-<p class="full-width center h">Поздравляем! Файл готов и отправлен на выгрузку. Проверьте папку загрузок на компьютере</p>
+<p class="full-width center h">
+    Поздравляем! Файл готов и отправлен на выгрузку. Проверьте папку загрузок на компьютере
+    <a color="black" routerLink="/upload" routerLinkActive="active-link" mat-icon-button aria-label="Назад">
+        <mat-icon>reply</mat-icon>
+    </a>
+</p>
