**Task creator: Many commit skipped...** This is last commit in PR

--- a/BarcodeLabelPrinringWebClient/src/app/start/start.component.html
+++ b/BarcodeLabelPrinringWebClient/src/app/start/start.component.html
@@ -1,5 +1,5 @@
 <div class="center h v">
     <app-file-upload route = "upload/table" inputLabel="csv файл для этикеток" 
-    underInputText="Скачать пример файла" exampleFileName="Example.csv" exampleFileRoute="upload/samplefile"
-    width="600" buttonText="Загрузить файл" filter=".csv" fileName="Archive.zip"></app-file-upload>
+    underInputText="Скачать пример файла"
+    width="750" buttonText="Загрузить файл" filter=".csv" fileName="Archive.zip"></app-file-upload>
 </div>
