--- a/BarcodeLabelPrinringWebClient/src/app/app.component.html
+++ b/BarcodeLabelPrinringWebClient/src/app/app.component.html
@@ -1,9 +1,7 @@
-<app-header></app-header>
-<div class="wrapper">
-    <div>
-        <main>
-            <router-outlet></router-outlet>
-        </main>
-    </div>
-</div>
-<app-footer></app-footer>
+<app-header class="header"></app-header>
+
+<main class="wrapper">
+    <router-outlet></router-outlet>
+</main>
+
+<app-footer class="footer"></app-footer>
