--- a/BarcodeLabelPrinringWebClient/src/app/file-upload/file-upload.component.scss
+++ b/BarcodeLabelPrinringWebClient/src/app/file-upload/file-upload.component.scss
@@ -1,6 +1,18 @@
+:host {
+    left: 0;
+    display: flex;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    align-items: center;
+    z-index: 10;
+    justify-content: center;
+    align-content: center;
+  }
+
 .upload-file-form {
     display: flex;
-
+    align-items: center;
     .mat-form-field {
         padding: 5px;
         margin-right: 10px;
@@ -14,6 +26,12 @@
     .mat-hint {
         text-decoration: underline;
         cursor: pointer;
+        a {
+            font-weight: 400;
+        }
+    }
+    .mat-checkbox {
+        margin-left: 15px;
     }
 }
 
@@ -26,33 +44,11 @@
 }
 [hidden] { display: none !important;}
 
-.loader {
-    width: 150px;
-    height: 150px;
+.load{
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin: 0;
-    margin-left: -25px;
-}
-
-.loader-wheel {
-    animation: spin 1s infinite linear;
-    border: 2px solid rgba(30, 30, 30, 0.5);
-    border-left: 4px solid #fff;
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
-    margin-bottom: 10px;
-    margin-left: 50px;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
+    .mat-spinner{
+        margin-bottom: 80px;
     }
 }
