--- a/BarcodeLabelPrinringWebClient/src/app/header/header.component.html
+++ b/BarcodeLabelPrinringWebClient/src/app/header/header.component.html
@@ -1,8 +1,7 @@
 <mat-toolbar>
-    <img src="../assets/LaredouteLogo.svg">
-    <span>Печать этикеток</span>
+    <img src="./assets/LaredouteLogo.svg">
+    <span name="title">{{title}}</span>
     <span class="spacer"></span>
-    <a class="link mat-small" href="https://www.laredoute.ru/">Основной сайт</a>
     <a routerLink="/settings" routerLinkActive="active-link" mat-icon-button aria-label="Настройки">
         <mat-icon>settings</mat-icon>
     </a>
