--- a/BarcodeLabelPrinringWebClient/src/app/header/header.component.scss
+++ b/BarcodeLabelPrinringWebClient/src/app/header/header.component.scss
@@ -1,7 +1,9 @@
 @import '../../lr-theme.scss';  
-
+:host {
+    z-index: 20;
+  }
 .mat-toolbar{
-    max-height: 55px;
+    height: 55px;
     padding-top: 10px;
     background: $lr-primary-color;
     padding-bottom: 10px;
