--- a/BarcodeLabelPrinringWebClient/src/app/settings/settings.component.scss
+++ b/BarcodeLabelPrinringWebClient/src/app/settings/settings.component.scss
@@ -1,12 +1,26 @@
 :host{
-    height: 730px;
+    padding-top: 10px;
     display: flex;
     flex-direction: column;
+    margin-left: 25px;
 }
+
 .form mat-form-field{
     min-width: 400px;
     min-height: 300px;
 }
+
 .form textarea{
     min-height: 300px;
+}
+
+.title{
+    margin-bottom: 30px;
+    margin-left: -10px;
+}
+
+.additional-text{
+    font-size: 13px;
+    color: #666;
+    margin-top:-10px;
 }
