--- a/BarcodeLabelPrinringWebClient/src/styles.scss
+++ b/BarcodeLabelPrinringWebClient/src/styles.scss
@@ -4,15 +4,24 @@ html {
   font-size: calc(2*14px);
 }
 
-html,
-body {
+html, body, app-root{
   height: 100%;
-
+  margin: 0;
+}
+body {
+  padding: 0;
+  margin: 0;
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
 }
 
-body {
-  margin: 0;
+main {
+  min-height: calc(100vh - 110px);
+}
 
+.footer {
+  height: 50px;
 }
 
 .full-width {
@@ -26,12 +35,6 @@ body {
   flex: 1 1 auto;
 }
 
-.wrapper {
-  display: flex;
-  height: 88%;
-  flex-direction: column;
-  justify-content: center;
-}
 a {
   color: unset;
   font-weight: bold;
